Compact AcidIsland command handling